kubernetes/apps/default/immich/dragonfly/network-policy.yaml
---
# This is a workaround for https://github.com/dragonflydb/dragonfly-operator/issues/495
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-metrics
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dragonfly
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - port: 9999
          protocol: TCP
